# python-django-jan-2024

./: .env  Dockerfile  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt
apps/auth/: serializers.py  urls.py  views.py
apps/auto_parks/: models.py  urls.py  views.py
apps/cars/: filters.py  models.py  serializers.py  views.py
apps/users/: managers.py  models.py  serializer.py  urls.py  views.py
backend/configs/: celery.py  settings.py  urls.py
backend/templates/: forgot_pass.html
cars/: models.py  serializers.py  views.py
cars/migrations/: 0001_initial.py
client/: asset-manifest.json  index.html
configs/: settings.py  urls.py
configs/extra_conf/: __init__.py  email_conf.py
core/: pagination.py
core/dataclasses/: car_dataclass.py  user_dataclass.py
core/enums/: forget_pass_token.py
core/services/: upload_photo.py
frontend/: package-lock.json  package.json
frontend/src/: App.js  index.js  router.js
mysql/: #ib_16384_0.dblwr  auto.cnf  binlog.000001  binlog.000002  binlog.000003  binlog.000004  binlog.000005  binlog.000006  binlog.000007  binlog.000008  binlog.000009  binlog.000010  binlog.000011  binlog.000012  binlog.000013  binlog.000014  binlog.000015  binlog.000016  binlog.000017  binlog.000018  binlog.000019  binlog.000020  binlog.000021  binlog.000022  binlog.000023  binlog.000024  binlog.000025  binlog.000026  binlog.000027  binlog.000028  binlog.000029  binlog.000030  binlog.000031  binlog.000032  binlog.000033  binlog.000034  binlog.000035  binlog.000036  binlog.000037  binlog.000038  (+14 more)
mysql/#innodb_redo/: #ib_redo10  (+1 more)
(+180 files in other folders)
